--- a/src/index.html
+++ b/src/index.html
@@ -17,39 +17,12 @@
 
   </head>
   <body>
-  <div class="container-fluid">
 
-  <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-          <a class="brand"></a>
-          <ul class="nav">
-              <li class="active"><a href="#">首页</a></li>
-              <li class="divider-vertical"></li>
-              <li><a href="#">地点</a></li>
-              <li class="divider-vertical"></li>
-              <li><a href="#">相册</a></li>
-          </ul>
-      </div>
-  </div>
-
+  <div id="header">集结号</div>
   <div ui-view="main">
       Loading...
   </div>
-
-  <div class="navbar navbar-fixed-bottom">
-      <div class="navbar-inner">
-          <a class="brand"></a>
-          <ul class="nav">
-              <li class="active"><a href="#">首页</a></li>
-              <li class="divider-vertical"></li>
-              <li><a href="#">地点</a></li>
-              <li class="divider-vertical"></li>
-              <li><a href="#">相册</a></li>
-          </ul>
-      </div>
-  </div>
-
-  </div>
+  <div id="footer"></div>
   <script>
       console.log(new Date());
   </script>
