--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
   <body>
 
   <div id="header">集结号</div>
-  <div ui-view="main">
-      Loading...
+  <div id="main" ui-view="main">
   </div>
   <div id="footer"></div>
   <script>
