Revert "fix iscoll bug"
This reverts commit 501b8fa43b929a138719334d6edf452cf2f5832c.

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
   <body>
 
   <div id="header">集结号</div>
-  <div id="main" ui-view="main">
+  <div ui-view="main">
+      Loading...
   </div>
   <div id="footer"></div>
   <script>
