--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,9 @@
   <body>
 
   <div id="header">集结号</div>
-  <div id="main" ui-view="main">
-  </div>
+  <!--<div id="main" ui-view="main">-->
+  <!--</div>-->
+  <mobile-view></mobile-view>
   <div id="footer"></div>
   <script>
       console.log(new Date());
