--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
   </head>
   <body >
     <div jqm-header jqm-theme='b'>
-        <a class="button back-button" href="#/">后退</a>
+        <a class="button" href="#/"><i class="icon-arrow-left icon-large"></i> </a>
+        <!--<i class="icon-spinner icon-spin icon-large"></i>-->
         <h1>{{title}}</h1>
     </div>
    	<div jqm-caching-view>
