--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,17 @@
   </head>
   <body ng-init='status = [ "已取消　", "未知状态", "即将开始", "正在进行", "已经结束"]'>
 
-  <div id="header">
-      <a class="option pull-left"><i class="icon-edit icon-large"></i></a>
+  <div id="header" ng-init="appTitle='集结号'">
+      <a class="option pull-left" ng-click="onOption('new')"><i class="icon-edit icon-large"></i></a>
       <span>{{title}}</span>
       <a class="option pull-right" ng-click="onOption('refresh')"><i class="icon-refresh icon-large"></i></a>
   </div>
 
+  <!--<div ng-view class="app-main"></div>-->
+
     <div jqm-caching-view jqm-popup-target="loginPopup" jqm-popup-model="loginPopupShow" jqm-popup-placement="middle">
-        <!--<div jqm-footer><h1>{{title}}</h1></div>-->
     </div>
+
     <div jqm-popup="loginPopup" class="popup">
         <div class="popup-header">
             <i class="fui-cross pull-right" ng-click="$parent.loginPopupShow=false"></i>
@@ -47,7 +49,6 @@
         <div class="popup-footer">
             <a class="btn btn-small" ng-click="$parent.loginPopupShow=false">关闭</a>
         </div>
-        <!--<a ng-click="loginPopupShow=false">close</a>-->
     </div>
   <script>
       console.log(new Date());
