--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="ui-mobile" ng-app="app" ng-controller="AppCtrl">
+<html ng-app="app" ng-controller="AppCtrl">
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="format-detection" content="telephone=no" />
