--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-controller="AppCtrl">
+<html>
   <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="format-detection" content="telephone=no" />
@@ -16,8 +16,8 @@
 	<% }); %>
 
   </head>
-  <body>
-  <div ng-view class="viewport"></div>
+  <body ng-app="app" ng-controller="AppCtrl">
+    <div ng-view class="viewport"></div>
   <script>
       console.log(new Date());
   </script>
